Fixed layout problems, started work on the workout page, did some icon designing

--- a/www/style.css
+++ b/www/style.css
@@ -1,44 +1,116 @@
-body {
+
+html, body {
   margin: 0;
-  margin-top: 20px;
-  padding: 0;
-  width:100vw;
-  height: 100vh;
-  background-color: #160b22;
-  color: aliceblue;
+  overflow-y: hidden;
+  
 }
+
 body {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-}
-.page {
-  display: none;
-  padding-bottom: 70px;
-}
-
-.page.active {
-  display: block;
+  height: 100vh;
+  background-color: #160b22;
+  color: rgb(255, 255, 255);
+  font-family: 'Inter', sans-serif;
 }
 
-.content {
-  margin-top: 60px;
-  overflow-y: auto;
-  overscroll-behavior-y: contain;
-}
-/* Topbar*/
-.home-topbar-container {
-  height: 80px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color:#27143b; ;
+/* Topbar/Header */
+header {
+  height: 70px;
+  background-color: #160b22;;
+  flex-shrink: 0;
   border-bottom-style: solid; 
-  border-color: #003f72;
+  border-color: #008cff;
   border-width: 1px;
 }
 
-/*Lower nav bar/toolbar*/
+/* Main Content */
+main {
+  flex: 1;
+  margin-bottom: 20px;
+  overflow-y: auto;
+  overscroll-behavior: contain;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+/* Workout Page */
+
+.wp-newworkout-button {
+  appearance: button;
+  background-color: #12678f;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.wp-newworkout-button:after {
+  background-clip: padding-box;
+  background-color: #1e98d1;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.wp-newworkout-button,
+.wp-newworkout-button:focus {
+  user-select: none;
+  -webkit-user-select: none;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.wp-newworkout-button:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+.wp-newworkout-button:disabled {
+  cursor: auto;
+}
+
+.wp-newworkout-button:active {
+  border-width: 4px 0 0;
+  background: none;
+}
+
+/* Bottombar/footer */
+footer {
+  height: 70px;
+  background-color: #29143f;
+  flex-shrink: 0;
+}
+
 .home-toolbar-container {
   background-color: #000000;
   height: 90px;
@@ -50,6 +122,7 @@ body {
   align-items: center;
   white-space: nowrap;
 }
+
 .home-toolbar-container button {
   display: flex;
   width: 100%;
@@ -73,6 +146,18 @@ body {
   border-color: #008cff;
   color: rgb(240, 248, 255);
 }
+
+
+
+.page {
+  display: none;
+  padding-bottom: 70px;
+}
+.page.active {
+  display: block;
+}
+
+
 
 
 /* loader */
